<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchWrap"
    android:background="@android:color/white"
    android:paddingBottom="10dp"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/ivNewIcon"
        style="@style/OrderTypeIcon"
        android:src="@mipmap/icon_online" />

    <TextView
        android:id="@+id/tvNewDesk"
        style="@style/OrderDeskNum"
        android:layout_toRightOf="@id/ivNewIcon"
        android:text="@string/order_kind_appoint"
        android:textColor="@color/colorOrderDeskNum" />

    <TextView
        android:id="@+id/tvNewPerson"
        style="@style/OrderDiningNum"
        android:layout_toRightOf="@id/tvNewDesk"
        android:text="3人" />

    <TextView
        android:id="@+id/tvNewWay"
        style="@style/OrderDiningNum"
        android:layout_toRightOf="@id/tvNewPerson"
        android:text="@string/new_order_way1" />

    <TextView
        android:id="@+id/tvNewSerial"
        style="@style/OrderSerialNum"
        android:layout_below="@id/ivNewIcon"
        android:text="@string/new_order_serial" />

    <TextView
        android:id="@+id/tvNewDatetime"
        style="@style/OrderSerialNum"
        android:layout_below="@id/tvNewSerial"
        android:text="@string/new_order_datetime" />

    <TextView
        android:id="@+id/tvNewOther"
        style="@style/OrderSerialNum"
        android:layout_below="@id/tvNewDatetime"
        android:text="@string/new_order_pay_way"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvNewAmount"
        style="@style/OrderAmountNum"
        android:layout_below="@id/tvNewOther"
        android:text="@string/order_money" />

    <TextView
        android:id="@+id/tvNewPayStatus"
        style="@style/OrderDiningNum"
        android:layout_alignBottom="@id/tvNewAmount"
        android:layout_below="@id/tvNewOther"
        android:layout_toRightOf="@id/tvNewAmount"
        android:text="@string/new_order_pay1" />

    <Button
        android:id="@+id/btnNewTake"
        style="@style/OrderTake"
        android:layout_alignParentRight="true"
        android:text="@string/order_take" />

    <Button
        android:id="@+id/btnNewCancel"
        style="@style/OrderCancel"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btnNewTake"
        android:text="@string/order_cancel" />
</RelativeLayout>